--- a/FriBot-Frontend/src/app/chat-window/chat-window.component.scss
+++ b/FriBot-Frontend/src/app/chat-window/chat-window.component.scss
@@ -24,17 +24,17 @@ body, html {
 }
 
 .pic {
-	width: 4rem;
-	height: 4rem;
+	width: 2rem;
+	height: 2rem;
 	background-size: cover;
 	background-position: center;
-	border-radius: 50%;
+	//border-radius: 50%;
 }
 
 .contact {
 	position: relative;
-	margin-bottom: 1rem;
-	padding-left: 5rem;
+	//margin-bottom: 1rem;
+	padding-left: 3rem;
 	height: 4.5rem;
 
 	display: flex;
@@ -87,15 +87,28 @@ body, html {
 	border-radius: 1rem;
 	
 	background: white;
-	box-shadow: 
-		0 0 8rem 0 rgba(black, 0.1),
-		0rem 2rem 4rem -3rem rgba(black, 0.5);
+	box-shadow: 0 0 8rem 0 rgb(0 0 0 / 38%), 0rem 2rem 4rem -3rem rgb(20 12 12);
 	
 	.contact.bar {
 		flex-basis: 3.5rem;
 		flex-shrink: 0;
-		margin: 1rem;
+		margin-left: 1rem;
+		margin-right: 1rem;
 		box-sizing: border-box;
+
+		.control-buttons {
+			position: absolute; 
+			right: 0;
+			i {
+				color: $text-2;
+				cursor: pointer;
+				transition: color 200ms;
+			
+				&:hover {
+					color: $text-1;
+				}
+			}
+		}
 	}
 	
 	.messages {
@@ -159,7 +172,7 @@ body, html {
 		box-sizing: border-box;
 		flex-basis: 4rem;
 		flex-shrink: 0;
-		display: flex;
+		//display: flex;
 		align-items: center;
 		padding: 0 0.5rem 0 1.5rem;
 		width: 100%;
