--- a/FriBot-Frontend/src/styles.scss
+++ b/FriBot-Frontend/src/styles.scss
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.background {
+    background-image: url('../src/assets/main_page_bg.png');
+    background-size: 100%;
+}
